--- a/Styles/headers.css
+++ b/Styles/headers.css
@@ -12,7 +12,6 @@
 nav {
     background: linear-gradient(145deg, #F1E5AC, #90EE90);
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     height: 80px;
@@ -42,7 +41,7 @@ nav .nav-items li {
 
 nav .nav-items li a {
     color: #000;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 700;
     text-decoration: none;
 }
@@ -116,21 +115,27 @@ nav .search-icon {
     display: none;
 }
 /* ----------------------------------- FOR RESPONSIVE ----------------------------------- */
-@media (max-width: 1245px) {
+@media (max-width: 1470px) {
     nav {
         padding: 0 50px;
     }
+
+}
+@media (max-width: 1370px) {
+    nav {
+        padding: 0 30px;
+    }
+
 }
 
-@media (max-width: 1140px) {
+
+@media (max-width: 1180px) {
     nav {
         padding: 0px;
     }
 
     nav .logo {
-        flex: 2;
         text-align: center;
-        width: 80px;
     }
 
     nav .nav-items {
@@ -140,7 +145,7 @@ nav .search-icon {
         width: 100%;
         left: -100%;
         height: 100%;
-        padding: 10px 50px 0 50px;
+        padding: 5px 50px 0 50px;
         text-align: center;
         background: linear-gradient(145deg, #F1E5AC, #90EE90);
         transition: left 0.3s ease;
@@ -156,7 +161,7 @@ nav .search-icon {
 
     nav .nav-items li {
         line-height: 40px;
-        margin: 30px 0;
+        margin: 10px 0;
     }
 
     nav .nav-items li a {
