--- a/Styles/headers.css
+++ b/Styles/headers.css
@@ -59,6 +59,16 @@ nav .nav-items li a.active {
     padding: 5px;
     border-radius: 5px;
 }
+nav .nav-items li a.logactive {
+    color: #fff;
+    background: #000;
+    padding: 5px;
+    border-radius: 5px;
+}
+nav .nav-items li a.logactive:hover{
+    color: #000;
+    background: #fff;
+}
 
 nav form {
     display: flex;
@@ -127,8 +137,6 @@ nav .search-icon {
     }
 
 }
-
-
 @media (max-width: 1180px) {
     nav {
         padding: 0px;
@@ -160,7 +168,7 @@ nav .search-icon {
     }
 
     nav .nav-items li {
-        line-height: 40px;
+        line-height: 20px;
         margin: 10px 0;
     }
 
