--- a/Styles/index.css
+++ b/Styles/index.css
@@ -8,7 +8,7 @@
     box-sizing: border-box;
     font-family: 'Work Sans', sans-serif;
 }
-.main-section{
+.tmr-add-section{
     margin-top: 20px;
     display: flex;
     gap: 20px;
@@ -56,7 +56,7 @@
     }
 }
 @media (max-width: 680px) {
-    .main-section{
+    .tmr-add-section{
         flex-direction: column;
     }
     .left-side{
@@ -74,3 +74,5 @@
         height: 120px;
     }
 }
+
+/* ------------------------- SLIDER ------------------------- */
