--- a/Styles/headers.css
+++ b/Styles/headers.css
@@ -26,11 +26,26 @@
 }
 .icons li a{
     text-decoration: none;
-    border: 2px solid #e63600;
     margin-right: 5px;
-    padding: 2px;
     font-size: 14px;
     border-radius: 5px;
+}
+.icons li a .fa-phone, .icons li a .fa-envelope{
+    color: #DB4437;
+    border: 2px solid #DB4437;
+    padding: 3px;
+}
+.icons li a .fa-facebook{
+    color: #3b5998;
+    border: 2px solid #3b5998;
+    padding: 3px;
+}
+.icons li a .fa-phone:hover, 
+.icons li a .fa-envelope:hover,
+.icons li a .fa-facebook:hover{
+    color: #000;
+    border: 2px solid #000;
+    border-radius: 2px;
 }
 /* ----------------------------------- Nav Bar ----------------------------------- */
 
@@ -175,7 +190,7 @@ nav .search-icon {
     nav .nav-items {
         position: fixed;
         z-index: 99;
-        top: 70px;
+        top: 150px;
         width: 100%;
         left: -100%;
         height: 100%;
@@ -260,6 +275,13 @@ nav .search-icon {
 
     nav .cancel-icon.show {
         display: block;
+    }
+    .top-section{
+        flex-direction: column;
+        height: 70px;
+    }
+    .top-section-title{
+        font-size: 12px;
     }
 }
 
