--- a/Styles/index.css
+++ b/Styles/index.css
@@ -8,71 +8,253 @@
     box-sizing: border-box;
     font-family: 'Work Sans', sans-serif;
 }
-.tmr-add-section{
+
+.tmr-add-section {
     margin-top: 20px;
     display: flex;
     gap: 20px;
-    justify-content: center;
 }
+
 /* ------------------------- LEFT SIDE ------------------------- */
-.left-side{
+.left-side {
     text-align: center;
     width: 90%;
 }
-.left-side-title{
+
+.left-side-title {
     font-size: 30px;
     font-weight: 900;
     color: #000;
 }
-.left-side-text{
+
+.left-side-text {
     margin-top: 10px;
     color: #0000009a;
     font-weight: 700;
 }
-.left-side-img{
-    margin-top: 10px;
+/* ------------------------- Auto Slider Card Todays Mortgage Rate ------------------------- */
+
+.card-slider {
+    margin: 30px;
+    display: flex;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    -webkit-overflow-scrolling: touch;
+}
+
+.card-slide {
+    scroll-snap-align: start;
+    flex: 0 0 auto;
+    width: 100%;
+    margin-right: 20px;
+}
+
+.card {
+    width: 100%;
+    height: 250px;
+    background: linear-gradient(145deg, #F1E5AC, #90EE90);
+    margin: 0 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+.card-slider.active {
+    cursor: grabbing;
+    cursor: -webkit-grabbing;
+}
+
+.card-slider.active .card-slide {
+    pointer-events: none;
+}
+.tm-title{
+    padding-top: 20px;
+    font-size: 30px;
+    font-weight: 900;
+    letter-spacing: 2px;
+}
+.tm-txt{
+    margin-top: 20px;
+    font-size: 25px;
+    font-weight: 700;
+    color:#000000cf;
+}
+sub{
+    font-size: 14px;
+}
+.green,
+.red{
+    margin-top: 30px;
+    font-size: 30px;
+    font-weight: 700;
+}
+.green{
+    color: green;
+}
+.red {
+    color: red;
+}
+@media screen and (max-width: 480px) {
+    .card-slider{
+        margin: 10px 0 10px 0;
+    }
+}
+
+
+/* ------------------------- SLIDER ------------------------- */
+
+.slide-box {
+    display: none;
+    border: 3px solid #90EE90;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.slide-box img {
+    vertical-align: middle;
     width: 80%;
+    height: 400px;
+}
+
+.slider {
+    max-width: 80%;
+    position: relative;
+    margin: auto;
+}
+
+.previous,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    padding: 20px;
+    margin-top: -22px;
+    color: #90EE90;
+    font-weight: bold;
+    font-size: 20px;
+    transition: 0.5s ease;
+}
+
+.previous {
+    left: 0;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.next {
+    right: 0;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+
+.previous:hover,
+.next:hover {
+    background-color: #000000c7;
+}
+
+.slide-number {
+    color: #000;
+    font-size: 18px;
+    font-weight: 700;
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 10px;
+}
+
+.rounded_btn {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background: #1514145e;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+.active,
+.rounded_btn:hover {
+    background: #110f0fdc;
+}
+
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {
+        opacity: .5;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .rounded_btn {
+        height: 12px;
+        width: 12px;
+        margin: 0 1px;
+    }
+}
+
+@media screen and (max-width: 300px) {
+
+    .previous,
+    .next,
+    .text {
+        font-size: 11px;
+    }
 }
 
 /* ------------------------- RIGHT SIDE ------------------------- */
-.right-side{
+.right-side {
     width: 20%;
 }
-.right-side-img{
+
+.right-side-img {
     width: 90%;
     height: 200px;
     margin-bottom: 10px;
 }
-/* ------------------------- RESPONSIVE ------------------------- */
 
 @media (max-width: 1380px) {
-    .right-side-img{
+    .right-side-img {
         height: 300px;
     }
 }
+
 @media (max-width: 1380px) {
-    .right-side-img{
+    .right-side-img {
         height: 220px;
     }
 }
-@media (max-width: 680px) {
-    .tmr-add-section{
+
+@media (max-width: 880px) {
+    .tmr-add-section {
         flex-direction: column;
     }
-    .left-side{
+
+    .left-side {
         width: 100%;
     }
-    .left-side-title{
+
+    .left-side-title {
         font-size: 20px;
     }
-    .right-side{
+
+    .right-side {
         width: 100%;
     }
-    .right-side-img{
+
+    .right-side-img {
         margin-left: 10px;
         width: 120px;
         height: 120px;
     }
 }
 
-/* ------------------------- SLIDER ------------------------- */
+
+
+
