--- a/Styles/index.css
+++ b/Styles/index.css
@@ -256,6 +256,44 @@ sub{
 
 
 /* ------------------------- Feedbacks ------------------------- */
+.closest-services{
+    margin: 80px 20px 80px 20px;
+}
+.closest-services-title{
+    text-align: center;
+    font-size: 40px;
+    font-weight: 900;
+    color: #00B2FF;
+    text-decoration: underline;
+    margin-bottom: 20px;
+}
+.closest-service-box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 30px;
+}
+.closest-service{
+    width: 180px;
+    height: 120px;
+    border: 3px solid #DBF9D8;
+    border-radius: 10px;
+}
+.numbers{
+    font-size: 25px;
+    font-weight: 700;
+    padding-top: 20px;
+}
+.closest-service-title{
+    margin-top: 2px;
+    font-size: 20px;
+    font-weight: 700;
+    color: #00000099;
+}
+
+
+/* ------------------------- Feedbacks ------------------------- */
 
 .feedbacks{
     margin: 20px;
