--- a/Styles/footer.css
+++ b/Styles/footer.css
@@ -3,7 +3,7 @@
 .footer{
     margin-top: 30px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);  
+    grid-template-columns: repeat(4, 1fr);  
     text-align: center;  
     background: linear-gradient(145deg, #90EE90, #F1E5AC);
     gap: 20px;
@@ -57,9 +57,69 @@
 .fa-envelope:hover{
     color: #c4302b;
 }
+.links li{
+    list-style: none;
+}
+.links li a{
+    text-decoration: none;
+    color: #00acee;
+    font-size: 18px;
+    font-weight: 900;
+    padding-top: 5px;
+}
+.links li a:hover{
+    text-decoration: underline;
+}
+.inputs{
+    width: 90%;
+    margin-top: 20px;
+    padding: 10px;
+    background: #00000098;
+    color: #fff;
+    border-radius: 10px;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 0.5px;
+}
+.feedback-btn{
+    float: right;
+    margin-top: 5px;
+    margin-right: 5%;
+    width: 120px;
+    height: 40px;
+    font-size: 20px;
+    font-weight: 900;
+    letter-spacing: 0.5px;
+    color: #000;
+    border: 3px solid #000;
+    border-radius: 5px;
+}
+.feedback-btn:hover{
+    color: #fff;
+    background: #000;
+    border-radius: 8px;
+}
+.maps{
+    border-radius: 5px;
+}
+.contact-info{
+    margin-top: 10px;
+    font-size: 18px;
+    font-weight: 700;
+    color: #000000e4;
+}
+.contact-info-header{
+    color: #000;
+    font-weight: 900;
+}
 @media screen and (max-width: 1180px) {
     .footer{
         grid-template-columns: repeat(1, 1fr);
         padding-bottom: 30px;
+    }
+}
+@media screen and (max-width: 320px) {
+    .maps{
+        width: 100%;
     }
 }
