--- a/Styles/footer.css
+++ b/Styles/footer.css
@@ -93,6 +93,7 @@
     color: #000;
     border: 3px solid #000;
     border-radius: 5px;
+    cursor: pointer;
 }
 .feedback-btn:hover{
     color: #fff;
