--- a/Styles/mortgage.css
+++ b/Styles/mortgage.css
@@ -37,6 +37,7 @@ hr{
     font-size: 25px;
     font-weight: 700;
     margin: 20px;
+    text-decoration: underline;
 }
 .mortgage-text{
     margin: 20px;
