Footer About Us

--- a/Styles/footer.css
+++ b/Styles/footer.css
@@ -21,7 +21,7 @@
     font-weight: 700px;
     color: #000000b1;
     letter-spacing: 0.5px;
-    text-align: center;
+    margin-bottom: 5px;
 }
 .icon{
     margin-top: 20px;
