--- a/Styles/footer.css
+++ b/Styles/footer.css
@@ -17,11 +17,11 @@
     color: #000;
 }
 .footer-text{
-    font-size: 18px;
+    font-size: 14px;
     font-weight: 700px;
     color: #000000b1;
     letter-spacing: 0.5px;
-    margin-bottom: 5px;
+    margin: 10px;
 }
 .icon{
     margin-top: 20px;
