--- a/Styles/aboutUs.css
+++ b/Styles/aboutUs.css
@@ -18,6 +18,10 @@
     background: #90EE90;
     border-radius: 10px;
 }
+.about-section,
+.team-section{
+    width: 180px;
+}
 .switch-btn:hover,
 .about-section:hover,
 .team-section:hover{
