--- a/Styles/footer.css
+++ b/Styles/footer.css
@@ -5,7 +5,7 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);  
     text-align: center;  
-    background: linear-gradient(145deg, #90EE90, #F1E5AC);
+    background: #55A630;
     gap: 20px;
     padding-bottom: 50px;
 }
@@ -19,7 +19,7 @@
 .footer-text{
     font-size: 14px;
     font-weight: 700px;
-    color: #000000b1;
+    color: #000000dc;
     letter-spacing: 0.5px;
     margin: 10px;
 }
@@ -65,7 +65,7 @@
 }
 .links li a{
     text-decoration: none;
-    color: #00acee;
+    color: #EEEF20;
     font-size: 18px;
     font-weight: 900;
     padding-top: 5px;
@@ -77,7 +77,7 @@
     width: 90%;
     margin-top: 20px;
     padding: 10px;
-    background: #00000098;
+    background: #000000c6;
     color: #fff;
     border-radius: 10px;
     font-size: 18px;
