--- a/Styles/headers.css
+++ b/Styles/headers.css
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background: linear-gradient(145deg, #90EE90, #F1E5AC);
+    background: #55A630;
     height: 30px;
 }
 .top-section-title{
@@ -51,7 +51,7 @@
 
 nav {
     margin-top: 2px;
-    background: linear-gradient(145deg, #F1E5AC, #90EE90);
+    background: #EEEF20;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -60,8 +60,8 @@ nav {
 }
 
 nav .logo {
-    height: 60px;
-    width: 80px;
+    height: 70px;
+    width: 100px;
 }
 
 nav .logo img {
@@ -155,7 +155,7 @@ nav .cancel-btn{
         left: -100%;
         height: 100%;
         text-align: center;
-        background: linear-gradient(145deg, #F1E5AC, #90EE90);
+        background: #EEEF20;
     }
 
     nav .nav-bar ul {
@@ -201,14 +201,14 @@ nav .cancel-btn{
 
 @media screen and (max-width: 320px) {
     nav .logo {
-        height: 40px;
+        height: 60px;
     }
 
 }
 
 /* -----------------------------------  BANGLA SECTION -----------------------------------  */
 .bangla{
-    background: linear-gradient(145deg, #90EE90, #F1E5AC);
+    background: #55A630;
     margin-top: 5px;
 }
 .bangla-section{
@@ -251,10 +251,10 @@ nav .cancel-btn{
 }
 
 ::-webkit-scrollbar-thumb {
-    background: linear-gradient(transparent, #90EE90);
+    background: linear-gradient(transparent, #55A630);
     border-radius: 6px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: linear-gradient(transparent, #F1E5AC);
+    background: linear-gradient(transparent, #EEEF20);
 }
