--- a/Styles/index.css
+++ b/Styles/index.css
@@ -100,6 +100,9 @@ sub{
     }
 }
 @media screen and (max-width: 420px) {
+    .left-side-text{
+        font-size: 12px;
+    }
     .tm-title{
         font-size: 14px;
     }
