--- a/Styles/contactUs.css
+++ b/Styles/contactUs.css
@@ -84,6 +84,12 @@
     border: 2px solid #90EE90;
     border-radius: 10px;
 }
+.submit-message{
+    color: green;
+    margin-bottom: 10px;
+    font-size: 20px;
+    font-weight: 900;
+}
 @media screen and (max-width: 980px) {
     .contact-infos{
         flex-direction: column;
