--- a/Styles/footer.css
+++ b/Styles/footer.css
@@ -116,6 +116,20 @@
     color: #000;
     font-weight: 900;
 }
+.submit-message{
+    color: green;
+    margin-bottom: 10px;
+    font-size: 20px;
+    font-weight: 900;
+}
+.footer-version{
+    font-size: 16px;
+    font-weight: 700;
+    text-align: center;
+    background: #55A630;
+    color: #000;
+    padding-bottom: 10px;
+}
 @media screen and (max-width: 1180px) {
     .footer{
         grid-template-columns: repeat(1, 1fr);
