--- a/Styles/appointment.css
+++ b/Styles/appointment.css
@@ -65,6 +65,12 @@
     border: 2px solid #90EE90;
     border-radius: 10px;
 }
+.submit-message{
+    color: green;
+    margin-bottom: 10px;
+    font-size: 20px;
+    font-weight: 900;
+}
 @media screen and (max-width: 380px) {
     .appointment-input{
         width: 100%;
