--- a/Styles/documentList.css
+++ b/Styles/documentList.css
@@ -45,7 +45,7 @@ hr{
     margin-bottom: 10px;
 }
 .document-list{
-    background-image: url("/Assets/Images/LogoTrans.png");
+    background-image: url("/Assets/Images/Logo.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
