--- a/Styles/index.css
+++ b/Styles/index.css
@@ -73,7 +73,8 @@ sub{
     font-size: 12px;
 }
 .green,
-.red{
+.red,
+.orange{
     margin-top: 30px;
     font-size: 25px;
     font-weight: 700;
@@ -83,6 +84,9 @@ sub{
 }
 .red {
     color: red;
+}
+.orange{
+    color: orange;
 }
 @media screen and (max-width: 680px) {
     .tm-title{
