--- a/Styles/footer.css
+++ b/Styles/footer.css
@@ -36,7 +36,7 @@
 }
 .icon li a{
     text-decoration: none;
-    font-size: 18px;
+    font-size: 20px;
     color: #000;
     border: 2px solid #000;
     border-radius: 5px;
@@ -66,7 +66,7 @@
 .links li a{
     text-decoration: none;
     color: #EEEF20;
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 900;
     padding-top: 5px;
 }
@@ -80,7 +80,7 @@
     background: #000000c6;
     color: #fff;
     border-radius: 10px;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 500;
     letter-spacing: 0.5px;
 }
@@ -103,12 +103,14 @@
     background: #000;
     border-radius: 8px;
 }
-.maps{
-    border-radius: 5px;
+.nmls{
+    font-size: 25px;
+    font-weight: 900;
+    color: #fff;
 }
 .contact-info{
     margin-top: 10px;
-    font-size: 18px;
+    font-size: 14px;
     font-weight: 700;
     color: #000000e4;
 }
@@ -119,11 +121,11 @@
 .submit-message{
     color: green;
     margin-bottom: 10px;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 900;
 }
 .footer-version{
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 700;
     text-align: center;
     background: #55A630;
@@ -134,10 +136,5 @@
     .footer{
         grid-template-columns: repeat(1, 1fr);
         padding-bottom: 30px;
-    }
-}
-@media screen and (max-width: 320px) {
-    .maps{
-        width: 100%;
     }
 }
