--- a/Styles/headers.css
+++ b/Styles/headers.css
@@ -5,27 +5,33 @@
 * {
     margin: 0;
     padding: 0;
+    text-decoration: none;
     box-sizing: border-box;
     font-family: 'Work Sans', sans-serif;
 }
-.top-section{
+
+.top-section {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background: #55A630;
+    background: #90EE90;
     height: 30px;
 }
-.top-section-title{
+
+.top-section-title {
     font-size: 20px;
     font-weight: 500;
 }
-.icons{
+
+.icons {
     display: flex;
 }
-.icons li{
+
+.icons li {
     list-style: none;
 }
-.icons li a{
+
+.icons li a {
     text-decoration: none;
     margin-right: 5px;
     font-size: 14px;
@@ -34,210 +40,289 @@
     border: 2px solid #000;
     padding: 2px;
 }
-
-/* ----------------------------------- Nav Bar ----------------------------------- */
-
-nav {
-    margin-top: 2px;
-    background: #EEEF20;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    height: 80px;
-    padding: 0 100px;
-}
-
-nav .logo {
-    height: 70px;
-    width: 100px;
-}
-
-nav .logo img {
-    width: 100%;
-    height: 100%;
-    border-radius: 5px;
-}
-
-nav .nav-bar ul {
-    display: flex;
-}
-
-nav .nav-bar li {
-    list-style: none;
-    padding: 0 15px;
-}
-
-nav .nav-bar li a {
-    color: #000;
-    font-size: 18px;
-    font-weight: 900;
-    text-decoration: none;
-    padding: 5px;
-}
-
-nav .nav-bar li a:hover {
-    color: #0c490cf2;
-    background: #fff;
-    border-radius: 5px;
-}
-
-nav .nav-bar li a.active {
-    color: #0c490cf2;
-    background: #fff;
-    padding: 5px;
-    border-radius: 5px;
-}
-nav .nav-bar li a.logactive {
-    color: #fff;
-    background: #000;
-    padding: 5px;
-    border-radius: 5px;
-    font-weight: 500;
-}
-nav .nav-bar li a.logactive:hover{
-    color: #000;
-    background: #fff;
-}
-nav .menu-icon,
-nav .cancel-btn{
-    width: 40px;
-    text-align: center;
-    margin: 0 50px;
-    font-size: 18px;
-    color: #0c490cf2;
-    cursor: pointer;
-    display: none;
-}
-
-nav .menu-icon span,
-nav .cancel-btn{
-    display: none;
-}
-/* ----------------------------------- FOR RESPONSIVE ----------------------------------- */
-@media screen and (max-width: 1470px) {
-    nav {
-        padding: 0 50px;
-    }
-
-}
-@media screen and (max-width: 1370px) {
-    nav {
-        padding: 0 30px;
-    }
-
-}
-@media screen and (max-width: 1320px) {
-    nav {
-        padding: 0px;
-    }
-
-    nav .logo {
-        text-align: center;
-    }
-
-    nav .nav-bar {
-        position: fixed;
-        z-index: 99;
-        top: 150px;
-        width: 100%;
-        left: -100%;
-        height: 100%;
-        text-align: center;
-        background: #EEEF20;
-    }
-
-    nav .nav-bar ul {
-        flex-direction: column;
-    }
-
-    nav .nav-bar.active {
-        left: 0px;
-    }
-
-    nav .nav-bar li {
-        line-height: 20px;
-        margin: 10px 0;
-    }
-
-    nav .nav-bar li a {
-        font-size: 20px;
-    }
-
-    nav .menu-icon {
-        display: block;
-    }
-
-    nav .menu-icon span {
-        display: block;
-    }
-
-    nav .menu-icon span.hide{
-        display: none;
-    }
-
-    nav .cancel-btn.show {
-        display: block;
-    }
-    .top-section{
-        flex-direction: column;
-        height: 70px;
-    }
+@media screen and (max-width: 660px) {
     .top-section-title{
         font-size: 12px;
     }
 }
 
-@media screen and (max-width: 320px) {
-    nav .logo {
-        height: 60px;
+/* ----------------------------------- Nav Bar ----------------------------------- */
+
+.hrader-sections {
+    background: #EEEF20;
+    position: fixed;
+    width: 100%;
+    height: 100px;
+    margin-top: 2px;
+}
+
+.hrader-sections nav {
+    display: flex;
+    justify-content: space-around;
+    margin: 0 auto;
+    height: 100px;
+    align-items: center;
+}
+
+nav .hrader-section {
+    display: flex;
+    align-items: center;
+}
+
+nav .hrader-section .list {
+    margin-left: 80px;
+    display: flex;
+}
+
+.logo {
+    padding-top: 5px;
+    width: 120px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+}
+
+.logo img {
+    width: 100px;
+    height: 80px;
+    border-radius: 5px;
+}
+
+.logo-text {
+    font-size: 16px;
+    font-weight: 900;
+    color: #000;
+}
+
+.list li {
+    list-style: none;
+    line-height: 70px;
+}
+
+.list li a,
+.list li label {
+    color: #000;
+    font-size: 18px;
+    font-weight: 900;
+    padding: 9px 17px;
+}
+
+.list li label {
+    display: none;
+}
+
+.list li a:hover,
+.list li label:hover {
+    color: #000;
+    background: #fff;
+    border-radius: 5px;
+}
+
+.hrader-sections .menu-icon {
+    color: #fff;
+    font-size: 18px;
+    cursor: pointer;
+    line-height: 70px;
+    width: 70px;
+    text-align: center;
+}
+
+.list li a.active {
+    color: #0c490cf2;
+    background: #fff;
+    padding: 5px;
+    border-radius: 5px;
+    margin-right: 10px;
+}
+
+.list li a.logactive {
+    color: #fff;
+    background: #000;
+    padding: 5px;
+    border-radius: 5px;
+    font-weight: 500;
+    margin-left: 10px;
+}
+
+.list li a.logactive:hover {
+    color: #000;
+    background: #fff;
+}
+
+.menu-icon {
+    display: none;
+}
+
+.hrader-sections #show-search:checked~.search-icon i::before {
+    content: "\f00d";
+}
+
+
+.hrader-sections input[type="checkbox"] {
+    display: none;
+}
+
+/* --------------------------- Dropdown Menu --------------------------- */
+.list ul {
+    position: absolute;
+    background: #90EE90;
+    top: 20px;
+    z-index: -1;
+    opacity: 0;
+    visibility: hidden;
+    border-radius: 10px;
+    transition: all 0.5s ease;
+}
+
+.list li:hover>ul {
+    top: 70px;
+    opacity: 1;
+    visibility: visible;
+    transition: all 0.5s ease;
+}
+
+.list ul li a {
+    display: block;
+    width: 100%;
+    line-height: 30px;
+    border-radius: 5px !important;
+}
+
+.list ul li a:hover {
+    background: #000;
+    color: #fff;
+}
+
+
+@media screen and (max-width: 1280px) {
+    .hrader-sections .menu-icon {
+        display: block;
     }
 
+    .hrader-sections #show-menu:checked~.menu-icon i::before {
+        content: "\f00d";
+    }
+
+    nav .hrader-section .list {
+        display: block;
+        position: fixed;
+        background: #90EE90;
+        height: 100%;
+        width: 100%;
+        top: 140px;
+        left: -100%;
+        margin-left: 0;
+        overflow-y: auto;
+        padding-bottom: 100px;
+        transition: all 0.3s ease;
+        text-align: center;
+    }
+
+    nav #show-menu:checked~.hrader-section .list {
+        left: 0%;
+    }
+
+    .list li {
+        margin: 15px 20px;
+    }
+
+    .list li a,
+    .list li label {
+        line-height: 40px;
+        font-size: 20px;
+        display: block;
+        padding: 8px 16px;
+        cursor: pointer;
+    }
+
+    .list li a.hrader-main-title {
+        display: none;
+    }
+
+    /* --------------------------- Dropdown Menu --------------------------- */
+    .list ul,
+    .list ul ul {
+        position: static;
+        opacity: 1;
+        visibility: visible;
+        background: none;
+        max-height: 0px;
+        overflow: hidden;
+    }
+
+    .list #hrader-sub-title:checked~ul {
+        max-height: 100vh;
+    }
+
+    .list ul li {
+        margin: 7px 20px;
+        background: #EEEF20;
+    }
+
+    .list ul li a {
+        font-size: 18px;
+        line-height: 30px;
+        border-radius: 5px !important;
+    }
+}
+@media screen and (max-width: 400px) {
+    .hrader-sections nav {
+        padding: 0 10px;
+    }
 }
 
 /* -----------------------------------  BANGLA SECTION -----------------------------------  */
-.bangla{
-    background: #55A630;
-    margin-top: 5px;
+.bangla {
+    margin-top: 105px;
+    background: #90EE90;
 }
-.bangla-section{
+
+.bangla-section {
     display: flex;
     align-items: center;
     justify-content: space-around;
     height: 35px;
 }
-.bangla-section li{
+
+.bangla-section li {
     list-style: none;
 }
-.bangla-section li a{
+
+.bangla-section li a {
     text-decoration: none;
     font-size: 16px;
     font-weight: 700;
     color: #000;
     padding: 5px;
 }
-.bangla-section li a:hover{
+
+.bangla-section li a:hover {
     color: #0c490cf2;
     background: #fff;
     padding: 5px;
     border-radius: 5px;
 }
+
 /* ------------------------- RESPONSIVE ------------------------- */
 @media screen and (max-width: 680px) {
-    .bangla-section{
+    .bangla-section {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         height: 60px;
         padding: 10px;
     }
-    .bangla-section li a{
+
+    .bangla-section li a {
         font-size: 12px;
     }
 }
+
 @media screen and (max-width: 300px) {
-    .bangla-section li a{
+    .bangla-section li a {
         font-size: 10px;
     }
 }
+
 /* ----------------- FOR SCROLL BAR -------------------- */
 ::-webkit-scrollbar {
     width: 10px;
