--- a/Styles/headers.css
+++ b/Styles/headers.css
@@ -205,6 +205,7 @@ nav .hrader-section .list {
     nav .hrader-section .list {
         display: block;
         position: fixed;
+        z-index: 99;
         background: #90EE90;
         height: 100%;
         width: 100%;
