--- a/Styles/headers.css
+++ b/Styles/headers.css
@@ -118,7 +118,7 @@ nav .hrader-section .list {
 }
 
 .hrader-sections .menu-icon {
-    color: #fff;
+    color: #000;
     font-size: 18px;
     cursor: pointer;
     line-height: 70px;
