--- a/Styles/index.css
+++ b/Styles/index.css
@@ -143,18 +143,19 @@ sub{
 .slide-box {
     display: none;
     border: 3px solid #55A630;
+    border-radius: 5px;
     margin-top: 20px;
     margin-bottom: 20px;
 }
 
 .slide-box img {
     vertical-align: middle;
-    width: 80%;
-    height: 400px;
+    width: 100%;
+    height: 600px;
 }
 
 .slider {
-    max-width: 80%;
+    max-width: 95%;
     position: relative;
     margin: auto;
 }
