--- a/Styles/headers.css
+++ b/Styles/headers.css
@@ -64,7 +64,7 @@
     /* ----------------------------------- Nav Bar ----------------------------------- */
     
     .hrader-sections {
-        background: #EEEF20;
+        background: #f2d535;
         width: 100%;
         height: 100px;
         margin-top: 2px;
