--- a/Styles/index.css
+++ b/Styles/index.css
@@ -53,7 +53,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background: #EEEF20;
+    background: #f2d535;
 }
 .tm-title{
     font-size: 25px;
