--- a/Styles/index.css
+++ b/Styles/index.css
@@ -12,6 +12,7 @@
 .tmr-add-section {
     display: flex;
     gap: 20px;
+    margin-top: 10px;
 }
 
 /* ------------------------- LEFT SIDE ------------------------- */
