--- a/Styles/index.css
+++ b/Styles/index.css
@@ -86,7 +86,7 @@ sub{
 .orange{
     color: orange;
 }
-@media screen and (max-width: 680px) {
+@media screen and (max-width: 980px) {
     .tm-title{
         font-size: 20px;
     }
@@ -140,8 +140,6 @@ sub{
 
 .slide-box {
     display: none;
-    border: 3px solid #55A630;
-    border-radius: 5px;
     margin-top: 10px;
     margin-bottom: 20px;
 }
@@ -149,11 +147,11 @@ sub{
 .slide-box img {
     vertical-align: middle;
     width: 100%;
-    height: 500px;
+    height: 600px;
 }
 
 .slider {
-    max-width: 95%;
+    max-width: 100%;
     position: relative;
     margin: auto;
 }
@@ -165,7 +163,7 @@ sub{
     top: 50%;
     padding: 20px;
     margin-top: -22px;
-    color: #55A630;
+    color: #90EE90;
     font-weight: bold;
     font-size: 20px;
     transition: 0.5s ease;
@@ -269,9 +267,12 @@ sub{
     }
 }
 
-@media screen and  (max-width: 880px) {
+@media screen and  (max-width: 980px) {
     .tmr-add-section {
         flex-direction: column;
+    }
+    .right-side-img {
+        height: 300px;
     }
 
     .left-side {
