--- a/Styles/index.css
+++ b/Styles/index.css
@@ -349,32 +349,32 @@ sub{
 }
 
 
-/* ------------------------- Mortgage Section ------------------------- */
-.index-mortgage-sections{
+/* ------------------------- Document Section ------------------------- */
+.index-document-sections{
     width: 100%;
     height: 200px;
     background: #f2d535;
     text-align: center;
 }
-.index-mortgage-title{
+.index-document-title{
     font-size: 30px;
     font-weight: 900;
     color: #000;
     padding-top: 20px;
 }
-.index-mortgage-section{
+.index-document-section{
     display: flex;
     justify-content: space-around;
     align-items: center;
     margin-top: 30px;
 }
-.index-mortgage-header{
+.index-document-header{
     color: #000;
     font-weight: 700;
     font-size: 20px;
     margin-bottom: 20px;
 }
-.index-mortgage-button{
+.index-document-button{
     color: #000;
     background: #fff;
     border: none;
@@ -383,16 +383,16 @@ sub{
     font-size: 18px;
     font-weight: 900;
 }
-.index-mortgage-button:hover{
+.index-document-button:hover{
     background: #000;
     color: #fff;
     border-radius: 5px;
 }
 @media screen and  (max-width: 480px) {
-    .index-mortgage-sections{
+    .index-document-sections{
         height: 300px;
     }
-    .index-mortgage-section{
+    .index-document-section{
         flex-direction: column;
     }
     .for-bangla{
