--- a/Styles/footer.css
+++ b/Styles/footer.css
@@ -5,7 +5,7 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);  
     text-align: center;  
-    background: #90EE90;
+    background: #87cefa;
     gap: 20px;
     padding-bottom: 50px;
 }
@@ -128,7 +128,7 @@
     font-size: 14px;
     font-weight: 700;
     text-align: center;
-    background: #90EE90;
+    background: #87cefa;
     color: #000;
     padding-bottom: 10px;
 }
