--- a/Styles/headers.css
+++ b/Styles/headers.css
@@ -64,7 +64,7 @@
     /* ----------------------------------- Nav Bar ----------------------------------- */
     
     .hrader-sections {
-        background: #f2d535;
+        background: #87cefa;
         width: 100%;
         height: 100px;
         margin-top: 2px;
@@ -338,5 +338,5 @@
     }
     
      ::-webkit-scrollbar-thumb:hover {
-        background: linear-gradient(transparent, #EEEF20);
+        background: linear-gradient(transparent, #87cefa);
     }
