--- a/Styles/index.css
+++ b/Styles/index.css
@@ -69,7 +69,9 @@
     align-items: center;
     border: 3px solid #87cefa;
 }
-
+.slide-card:hover{
+    background: #87cefa;
+}
 .tm-title {
     font-size: 25px;
     font-weight: 900;
